src/backend/optix/snapshots/cuda_test__backend__optix__test__load_add_f32.snap
---
source: src/backend/optix/test.rs
expression: jit.kernel_debug()
---
===============================================
Kernel 4616028666505966174:

.version 8.0
.target sm_86
.address_size 64

.const .align 8 .b8 params[24];
.entry __raygen__cujit(){

	.reg.b8   %b <6>; .reg.b16 %w<6>; .reg.b32 %r<6>;
	.reg.b64  %rd<6>; .reg.f32 %f<6>; .reg.f64 %d<6>;
	.reg.pred %p <6>;

	call (%r0), _optix_get_launch_index_x, ();
	ld.const.u32 %r1, [params + 4];
	add.u32 %r0, %r0, %r1;

body:

	// [0]: ScheduleVar { op: Data, deps: [], ty: F32, param_ty: Input, reg: 5, buf: Some(0), tex: None, literal: 0, size: 10 } =>
	ld.const.u64 %rd0, [params+8];
	mad.wide.u32 %rd0, %r0, 4, %rd0;
	ld.global.cs.f32 %f5, [%rd0];

	// [1]: ScheduleVar { op: Add, deps: [SVarId(0), SVarId(0)], ty: F32, param_ty: Output, reg: 4, buf: Some(1), tex: None, literal: 0, size: 10 } =>
	add.f32 %f4, %f5, %f5;

	// Store:
	ld.const.u64 %rd0, [params + 16]; // rd0 <- params[offset]
	mad.wide.u32 %rd0, %r0, 4, %rd0; // rd0 <- Index * ty.size() + params[offset]
	st.global.cs.f32 [%rd0], %f4; // (Index * ty.size() + params[offset])[Index] <- var

	ret;
}

