src/backend/optix/snapshots/cuda_test__backend__optix__test__paralell.snap
---
source: src/backend/optix/test.rs
expression: jit.kernel_debug()
---
===============================================
Kernel 6638381210142792757:

.version 8.0
.target sm_86
.address_size 64

.const .align 8 .b8 params[16];
.entry __raygen__cujit(){

	.reg.b8   %b <5>; .reg.b16 %w<5>; .reg.b32 %r<5>;
	.reg.b64  %rd<5>; .reg.f32 %f<5>; .reg.f64 %d<5>;
	.reg.pred %p <5>;

	call (%r0), _optix_get_launch_index_x, ();
	ld.const.u32 %r1, [params + 4];
	add.u32 %r0, %r0, %r1;

body:

	// [0]: ScheduleVar { op: Idx, deps: [], ty: U32, param_ty: Output, reg: 4, buf: Some(0), tex: None, literal: 0, size: 10 } =>
	mov.u32 %r4, %r0;


	// Store:
	ld.const.u64 %rd0, [params + 8]; // rd0 <- params[offset]
	mad.wide.u32 %rd0, %r0, 4, %rd0; // rd0 <- Index * ty.size() + params[offset]
	st.global.cs.u32 [%rd0], %r4; // (Index * ty.size() + params[offset])[Index] <- var

	ret;
}
===============================================
Kernel 16494488086400879523:

.version 8.0
.target sm_86
.address_size 64

.const .align 8 .b8 params[16];
.entry __raygen__cujit(){

	.reg.b8   %b <5>; .reg.b16 %w<5>; .reg.b32 %r<5>;
	.reg.b64  %rd<5>; .reg.f32 %f<5>; .reg.f64 %d<5>;
	.reg.pred %p <5>;

	call (%r0), _optix_get_launch_index_x, ();
	ld.const.u32 %r1, [params + 4];
	add.u32 %r0, %r0, %r1;

body:

	// [0]: ScheduleVar { op: Idx, deps: [], ty: U32, param_ty: Output, reg: 4, buf: Some(0), tex: None, literal: 0, size: 3 } =>
	mov.u32 %r4, %r0;


	// Store:
	ld.const.u64 %rd0, [params + 8]; // rd0 <- params[offset]
	mad.wide.u32 %rd0, %r0, 4, %rd0; // rd0 <- Index * ty.size() + params[offset]
	st.global.cs.u32 [%rd0], %r4; // (Index * ty.size() + params[offset])[Index] <- var

	ret;
}

